<resources>
    <string name="app_name">login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="registar">Registrar</string>
    <string name="registrar">Registrar</string>
    <string name="logout">Salir</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">ha iniciado sesion correctamente</string>
    <string name="hello_blank_fragment1">Registrar</string>
    <string name="nombre">Nombre</string>
</resources>
